sentinel_frame/tests/with_sentinel_frame/fail/unsupported_abi.rs
use sentinel_frame::with_sentinel_frame;

#[with_sentinel_frame]
extern "Rust" fn test() {
}

fn main() {
}
